News UAT/force-app/main/default/objects/Account__x/fields/Company_Type_c__c.field-meta.xml
<CustomField>
    <fullName>Company_Type_c__c</fullName>
    <externalDeveloperName>Company_Type__c</externalDeveloperName>
    <label>Company Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Agency</fullName>
            </value>
            <value>
                <fullName>Business</fullName>
            </value>
            <value>
                <fullName>Contra</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Newsagency</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>