News UAT/force-app/main/default/objects/Account__x/fields/Contact_Centre_Customer_c__c.field-meta.xml
<CustomField>
    <fullName>Contact_Centre_Customer_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>Contact_Centre_Customer__c</externalDeveloperName>
    <label>Contact Centre Customer</label>
    <type>Checkbox</type>
</CustomField>