News UAT/force-app/main/default/objects/Account__x/fields/Contract_Description_c__c.field-meta.xml
<CustomField>
    <fullName>Contract_Description_c__c</fullName>
    <externalDeveloperName>Contract_Description__c</externalDeveloperName>
    <label>Pricing Description</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>