News UAT/force-app/main/default/objects/Account__x/fields/Count_c__c.field-meta.xml
<CustomField>
    <fullName>Count_c__c</fullName>
    <externalDeveloperName>Count__c</externalDeveloperName>
    <label>Count</label>
    <precision>18</precision>
    <readOnlyProxy>true</readOnlyProxy>
    <scale>0</scale>
    <type>Number</type>
</CustomField>