News UAT/force-app/main/default/objects/Account__x/fields/Credit_Limit_c__c.field-meta.xml
<CustomField>
    <fullName>Credit_Limit_c__c</fullName>
    <externalDeveloperName>Credit_Limit__c</externalDeveloperName>
    <label>Credit Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>