News UAT/force-app/main/default/objects/Account__x/fields/Credit_Status_c__c.field-meta.xml
<CustomField>
    <fullName>Credit_Status_c__c</fullName>
    <externalDeveloperName>Credit_Status__c</externalDeveloperName>
    <label>Credit Status</label>
    <length>30</length>
    <type>Text</type>
</CustomField>