News UAT/force-app/main/default/objects/Account__x/fields/credit_status_change_date_c__c.field-meta.xml
<CustomField>
    <fullName>credit_status_change_date_c__c</fullName>
    <externalDeveloperName>credit_status_change_date__c</externalDeveloperName>
    <label>Credit Status Change Date</label>
    <type>Date</type>
</CustomField>