News UAT/force-app/main/default/objects/Account__x/fields/Customer_Reference_c__c.field-meta.xml
<CustomField>
    <fullName>Customer_Reference_c__c</fullName>
    <externalDeveloperName>Customer_Reference__c</externalDeveloperName>
    <label>Customer Reference</label>
    <length>25</length>
    <type>Text</type>
</CustomField>