News UAT/force-app/main/default/objects/Account__x/fields/Date_ABN_Changed_c__c.field-meta.xml
<CustomField>
    <fullName>Date_ABN_Changed_c__c</fullName>
    <externalDeveloperName>Date_ABN_Changed__c</externalDeveloperName>
    <label>Date ABN Changed</label>
    <type>Date</type>
</CustomField>