News UAT/force-app/main/default/objects/Account__x/fields/Date_Account_Purged_c__c.field-meta.xml
<CustomField>
    <fullName>Date_Account_Purged_c__c</fullName>
    <externalDeveloperName>Date_Account_Purged__c</externalDeveloperName>
    <label>Date Account Purged</label>
    <type>Date</type>
</CustomField>