News UAT/force-app/main/default/objects/Account__x/fields/Date_became_Inactive_c__c.field-meta.xml
<CustomField>
    <fullName>Date_became_Inactive_c__c</fullName>
    <externalDeveloperName>Date_became_Inactive__c</externalDeveloperName>
    <label>Date became Inactive</label>
    <type>Date</type>
</CustomField>