News UAT/force-app/main/default/objects/Account__x/fields/Date_Business_Opened_c__c.field-meta.xml
<CustomField>
    <fullName>Date_Business_Opened_c__c</fullName>
    <externalDeveloperName>Date_Business_Opened__c</externalDeveloperName>
    <label>Date Business Opened</label>
    <type>Date</type>
</CustomField>