News UAT/force-app/main/default/objects/Account__x/fields/Date_Closed_c__c.field-meta.xml
<CustomField>
    <fullName>Date_Closed_c__c</fullName>
    <externalDeveloperName>Date_Closed__c</externalDeveloperName>
    <label>Date Closed</label>
    <type>Date</type>
</CustomField>