News UAT/force-app/main/default/objects/Account__x/fields/Date_Converted_c__c.field-meta.xml
<CustomField>
    <fullName>Date_Converted_c__c</fullName>
    <externalDeveloperName>Date_Converted__c</externalDeveloperName>
    <label>Date Converted</label>
    <type>Date</type>
</CustomField>