News UAT/force-app/main/default/objects/Account__x/fields/Date_converted_from_Lapsed_to_New_c__c.field-meta.xml
<CustomField>
    <fullName>Date_converted_from_Lapsed_to_New_c__c</fullName>
    <externalDeveloperName>Date_converted_from_Lapsed_to_New__c</externalDeveloperName>
    <label>SIS.Date converted from Lapsed Account</label>
    <type>Date</type>
</CustomField>