News UAT/force-app/main/default/objects/Account__x/fields/Date_Description_Field_Last_Updated_c__c.field-meta.xml
<CustomField>
    <fullName>Date_Description_Field_Last_Updated_c__c</fullName>
    <externalDeveloperName>Date_Description_Field_Last_Updated__c</externalDeveloperName>
    <label>Date &#39;Description&#39; Field Last Updated</label>
    <type>Date</type>
</CustomField>