News UAT/force-app/main/default/objects/Account__x/fields/Date_of_PAM_Change_c__c.field-meta.xml
<CustomField>
    <fullName>Date_of_PAM_Change_c__c</fullName>
    <externalDeveloperName>Date_of_PAM_Change__c</externalDeveloperName>
    <label>Date of PAM Change</label>
    <type>Date</type>
</CustomField>