News UAT/force-app/main/default/objects/Account__x/fields/Description_Field_Last_Updated_By_c__c.field-meta.xml
<CustomField>
    <fullName>Description_Field_Last_Updated_By_c__c</fullName>
    <externalDeveloperName>Description_Field_Last_Updated_By__c</externalDeveloperName>
    <label>&#39;Description&#39; Field Last Updated By:</label>
    <type>TextArea</type>
</CustomField>