News UAT/force-app/main/default/objects/Account__x/fields/Duplicate_Company_c__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_Company_c__c</fullName>
    <externalDeveloperName>Duplicate_Company__c</externalDeveloperName>
    <label>Duplicate Company</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Duplicate</fullName>
            </value>
            <value>
                <fullName>Parent Account Duplicate</fullName>
            </value>
            <value>
                <fullName>Child Account Duplicate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>