News UAT/force-app/main/default/objects/Account__x/fields/Established_Date_c__c.field-meta.xml
<CustomField>
    <fullName>Established_Date_c__c</fullName>
    <externalDeveloperName>Established_Date__c</externalDeveloperName>
    <label>Established Date</label>
    <type>Date</type>
</CustomField>