News UAT/force-app/main/default/objects/Account__x/fields/Expected_APN_Revenue_c__c.field-meta.xml
<CustomField>
    <fullName>Expected_APN_Revenue_c__c</fullName>
    <externalDeveloperName>Expected_APN_Revenue__c</externalDeveloperName>
    <label>Expected Annual Turnover</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>