News UAT/force-app/main/default/objects/Account__x/fields/Gel_Id_c__c.field-meta.xml
<CustomField>
    <fullName>Gel_Id_c__c</fullName>
    <externalDeveloperName>Gel_Id__c</externalDeveloperName>
    <label>Gel Id</label>
    <length>255</length>
    <referenceTargetField>Account.Gel_Id__c</referenceTargetField>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Companies</relationshipLabel>
    <relationshipName>Companies</relationshipName>
    <type>IndirectLookup</type>
</CustomField>