News UAT/force-app/main/default/objects/Account__x/fields/Has_Opportunity_c__c.field-meta.xml
<CustomField>
    <fullName>Has_Opportunity_c__c</fullName>
    <externalDeveloperName>Has_Opportunity__c</externalDeveloperName>
    <label>Total Opportunities</label>
    <precision>18</precision>
    <readOnlyProxy>true</readOnlyProxy>
    <scale>0</scale>
    <type>Number</type>
</CustomField>