News UAT/force-app/main/default/objects/Account__x/fields/Industry_c__c.field-meta.xml
<CustomField>
    <fullName>Industry_c__c</fullName>
    <externalDeveloperName>Industry__c</externalDeveloperName>
    <label>Industry</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Banking and Finance</fullName>
            </value>
            <value>
                <fullName>Government</fullName>
            </value>
            <value>
                <fullName>Miscellaneous</fullName>
            </value>
            <value>
                <fullName>Motor Vehicles</fullName>
            </value>
            <value>
                <fullName>Real Estate</fullName>
            </value>
            <value>
                <fullName>Retail</fullName>
            </value>
            <value>
                <fullName>Telecommunications</fullName>
            </value>
            <value>
                <fullName>Trades and Services</fullName>
            </value>
            <value>
                <fullName>Travel/Accommodation/Tourism</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>