News UAT/force-app/main/default/objects/Account__x/fields/Industry_Code_c__c.field-meta.xml
<CustomField>
    <fullName>Industry_Code_c__c</fullName>
    <externalDeveloperName>Industry_Code__c</externalDeveloperName>
    <label>Industry Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Advertising Agency</fullName>
            </value>
            <value>
                <fullName>Agents</fullName>
            </value>
            <value>
                <fullName>Animal/Vets/Grooming</fullName>
            </value>
            <value>
                <fullName>Arts &amp; Crafts</fullName>
            </value>
            <value>
                <fullName>Banking &amp; Finance</fullName>
            </value>
            <value>
                <fullName>Beauty &amp; Hair</fullName>
            </value>
            <value>
                <fullName>Clothes/Shoes/Jewels</fullName>
            </value>
            <value>
                <fullName>Commercial Printing</fullName>
            </value>
            <value>
                <fullName>Comm Grp/Charit/Club</fullName>
            </value>
            <value>
                <fullName>Contra Accounts</fullName>
            </value>
            <value>
                <fullName>Courier/Cargo</fullName>
            </value>
            <value>
                <fullName>Department Stores</fullName>
            </value>
            <value>
                <fullName>Education/Coll/Tuit</fullName>
            </value>
            <value>
                <fullName>Elections-Federal</fullName>
            </value>
            <value>
                <fullName>Elections-Local</fullName>
            </value>
            <value>
                <fullName>Elections- State</fullName>
            </value>
            <value>
                <fullName>Electrical/Computing</fullName>
            </value>
            <value>
                <fullName>Employ/Recruit/Agcy</fullName>
            </value>
            <value>
                <fullName>Entertain/Hotel/Rest</fullName>
            </value>
            <value>
                <fullName>ExtendedPaymentPlan</fullName>
            </value>
            <value>
                <fullName>Food/Groceries</fullName>
            </value>
            <value>
                <fullName>Funeral Directors</fullName>
            </value>
            <value>
                <fullName>Furniture/FloorCover</fullName>
            </value>
            <value>
                <fullName>Gambling/Gaming</fullName>
            </value>
            <value>
                <fullName>Garden &amp; Landscape</fullName>
            </value>
            <value>
                <fullName>General Retail</fullName>
            </value>
            <value>
                <fullName>Government- Federal</fullName>
            </value>
            <value>
                <fullName>Government- Local</fullName>
            </value>
            <value>
                <fullName>Government- State</fullName>
            </value>
            <value>
                <fullName>Hardware/Home Improv</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>