News UAT/force-app/main/default/objects/Account__x/fields/Industry_Code_NZ_c__c.field-meta.xml
<CustomField>
    <fullName>Industry_Code_NZ_c__c</fullName>
    <externalDeveloperName>Industry_Code_NZ__c</externalDeveloperName>
    <label>Industry Code NZ</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>11 - Bleaches</fullName>
            </value>
            <value>
                <fullName>12 - Disinfectants</fullName>
            </value>
            <value>
                <fullName>13 - Toilet, Bath</fullName>
            </value>
            <value>
                <fullName>14 - Cleansers</fullName>
            </value>
            <value>
                <fullName>15 - Detergents</fullName>
            </value>
            <value>
                <fullName>16 - Laun Det,Softnr</fullName>
            </value>
            <value>
                <fullName>1Z - To be allocated</fullName>
            </value>
            <value>
                <fullName>21 - Appl/Light Ret</fullName>
            </value>
            <value>
                <fullName>23 - Dishwashers</fullName>
            </value>
            <value>
                <fullName>24 - Electrical Misc</fullName>
            </value>
            <value>
                <fullName>25 - Fridge/Freezer</fullName>
            </value>
            <value>
                <fullName>26 - Kitchn Applncs</fullName>
            </value>
            <value>
                <fullName>27 - Ovens,Elec&amp;Gas</fullName>
            </value>
            <value>
                <fullName>28 - Sound Systems</fullName>
            </value>
            <value>
                <fullName>29 - TV,Video Rec</fullName>
            </value>
            <value>
                <fullName>2A - Wash Mach,Dryer</fullName>
            </value>
            <value>
                <fullName>2B - Pers Elec Prod</fullName>
            </value>
            <value>
                <fullName>31 - Bedding</fullName>
            </value>
            <value>
                <fullName>32 - Carpet</fullName>
            </value>
            <value>
                <fullName>33 - Floor Furn Ret</fullName>
            </value>
            <value>
                <fullName>34 - Furniture</fullName>
            </value>
            <value>
                <fullName>35 - Soft Furnish</fullName>
            </value>
            <value>
                <fullName>37 - Furniture Removal</fullName>
            </value>
            <value>
                <fullName>41 - Solid Fuels</fullName>
            </value>
            <value>
                <fullName>42 - Water Heating</fullName>
            </value>
            <value>
                <fullName>43 - Retail</fullName>
            </value>
            <value>
                <fullName>44 - Airconditioning</fullName>
            </value>
            <value>
                <fullName>46 - ElecGasHeat</fullName>
            </value>
            <value>
                <fullName>5A - Air Fresheners</fullName>
            </value>
            <value>
                <fullName>5B - Cookware</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>