News UAT/force-app/main/default/objects/Account__x/fields/Industry_Code_To_Be_Changed_c__c.field-meta.xml
<CustomField>
    <fullName>Industry_Code_To_Be_Changed_c__c</fullName>
    <externalDeveloperName>Industry_Code_To_Be_Changed__c</externalDeveloperName>
    <label>Change Industry Code To</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>RE- Agents</fullName>
            </value>
            <value>
                <fullName>RE- Developers</fullName>
            </value>
            <value>
                <fullName>RE- Project Builders</fullName>
            </value>
            <value>
                <fullName>Truck/Heavy Vehicles</fullName>
            </value>
            <value>
                <fullName>MV- New</fullName>
            </value>
            <value>
                <fullName>MV- Used</fullName>
            </value>
            <value>
                <fullName>MV- Caravans</fullName>
            </value>
            <value>
                <fullName>Transport &amp; Storage</fullName>
            </value>
            <value>
                <fullName>Banking &amp; Finance</fullName>
            </value>
            <value>
                <fullName>Insurance</fullName>
            </value>
            <value>
                <fullName>Beauty &amp; Hair</fullName>
            </value>
            <value>
                <fullName>Clothes/Shoes/Jewels</fullName>
            </value>
            <value>
                <fullName>Department Stores</fullName>
            </value>
            <value>
                <fullName>Electrical/Computing</fullName>
            </value>
            <value>
                <fullName>Food/Groceries</fullName>
            </value>
            <value>
                <fullName>Furniture/FloorCover</fullName>
            </value>
            <value>
                <fullName>Garden &amp; Landscape</fullName>
            </value>
            <value>
                <fullName>General Retail</fullName>
            </value>
            <value>
                <fullName>Hardware/Home Improv</fullName>
            </value>
            <value>
                <fullName>Machinery</fullName>
            </value>
            <value>
                <fullName>Marine/Boats/Fishing</fullName>
            </value>
            <value>
                <fullName>Newsagents</fullName>
            </value>
            <value>
                <fullName>Office/Business Equi</fullName>
            </value>
            <value>
                <fullName>Petrol Service Statn</fullName>
            </value>
            <value>
                <fullName>Pharmacies</fullName>
            </value>
            <value>
                <fullName>Pubs/Liquor</fullName>
            </value>
            <value>
                <fullName>Rental Hire</fullName>
            </value>
            <value>
                <fullName>Rural</fullName>
            </value>
            <value>
                <fullName>Shopping Centre</fullName>
            </value>
            <value>
                <fullName>Sport/Leisure/Touris</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>