News UAT/force-app/main/default/objects/Account__x/fields/Inserts_YTD_TEST_c__c.field-meta.xml
<CustomField>
    <fullName>Inserts_YTD_TEST_c__c</fullName>
    <externalDeveloperName>Inserts_YTD_TEST__c</externalDeveloperName>
    <label>Inserts YTD (TEST)</label>
    <precision>18</precision>
    <readOnlyProxy>true</readOnlyProxy>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>