News UAT/force-app/main/default/objects/Account__x/fields/Key_Strategic_Information_c__c.field-meta.xml
<CustomField>
    <fullName>Key_Strategic_Information_c__c</fullName>
    <externalDeveloperName>Key_Strategic_Information__c</externalDeveloperName>
    <label>Key Strategic Information</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>