News UAT/force-app/main/default/objects/Account__x/fields/Lapsed_Client_or_Active_c__c.field-meta.xml
<CustomField>
    <fullName>Lapsed_Client_or_Active_c__c</fullName>
    <externalDeveloperName>Lapsed_Client_or_Active__c</externalDeveloperName>
    <label>SIS.Lapsed Client or Active</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>