News UAT/force-app/main/default/objects/Account__x/fields/Last_Month_c__c.field-meta.xml
<CustomField>
    <fullName>Last_Month_c__c</fullName>
    <externalDeveloperName>Last_Month__c</externalDeveloperName>
    <label>Last Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>