News UAT/force-app/main/default/objects/Account__x/fields/Last_Publication_date_c__c.field-meta.xml
<CustomField>
    <fullName>Last_Publication_date_c__c</fullName>
    <externalDeveloperName>Last_Publication_date__c</externalDeveloperName>
    <label>Last Insertion Date</label>
    <type>Date</type>
</CustomField>