News UAT/force-app/main/default/objects/Account__x/fields/Last_Year_cms_c__c.field-meta.xml
<CustomField>
    <fullName>Last_Year_cms_c__c</fullName>
    <externalDeveloperName>Last_Year_cms__c</externalDeveloperName>
    <label>CMS Achieved LY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>