News UAT/force-app/main/default/objects/Account__x/fields/Latest_Contract_Id_c__c.field-meta.xml
<CustomField>
    <fullName>Latest_Contract_Id_c__c</fullName>
    <externalDeveloperName>Latest_Contract_Id__c</externalDeveloperName>
    <label>Latest Contract ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>