News UAT/force-app/main/default/objects/Account__x/fields/Lead_generated_by_LinkedIn_c__c.field-meta.xml
<CustomField>
    <fullName>Lead_generated_by_LinkedIn_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>Lead_generated_by_LinkedIn__c</externalDeveloperName>
    <label>Lead generated by LinkedIn</label>
    <type>Checkbox</type>
</CustomField>