News UAT/force-app/main/default/objects/Account__x/fields/LID_LinkedIn_Company_Id_c__c.field-meta.xml
<CustomField>
    <fullName>LID_LinkedIn_Company_Id_c__c</fullName>
    <externalDeveloperName>LID__LinkedIn_Company_Id__c</externalDeveloperName>
    <label>LinkedIn Company Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>