News UAT/force-app/main/default/objects/Account__x/fields/Local_National2_c__c.field-meta.xml
<CustomField>
    <fullName>Local_National2_c__c</fullName>
    <externalDeveloperName>Local_National2__c</externalDeveloperName>
    <label>Local / National</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>