News UAT/force-app/main/default/objects/Account__x/fields/Local_National_c__c.field-meta.xml
<CustomField>
    <fullName>Local_National_c__c</fullName>
    <externalDeveloperName>Local_National__c</externalDeveloperName>
    <label>Direct/Agency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Local</fullName>
            </value>
            <value>
                <fullName>National</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>