News UAT/force-app/main/default/objects/Account__x/fields/LYTD_lines_achieved_c__c.field-meta.xml
<CustomField>
    <fullName>LYTD_lines_achieved_c__c</fullName>
    <externalDeveloperName>LYTD_lines_achieved__c</externalDeveloperName>
    <label>Lines Achieved LYTD</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>