News UAT/force-app/main/default/objects/Account__x/fields/M_O_Account_c__c.field-meta.xml
<CustomField>
    <fullName>M_O_Account_c__c</fullName>
    <externalDeveloperName>M_O_Account__c</externalDeveloperName>
    <label>M/O Account</label>
    <length>18</length>
    <referenceTo>Account__x</referenceTo>
    <relationshipLabel>Companies</relationshipLabel>
    <relationshipName>Companies4</relationshipName>
    <type>ExternalLookup</type>
</CustomField>