News UAT/force-app/main/default/objects/Account__x/fields/Manager_of_Request_PAM_Change_name_c__c.field-meta.xml
<CustomField>
    <fullName>Manager_of_Request_PAM_Change_name_c__c</fullName>
    <externalDeveloperName>Manager_of_Request_PAM_Change_name__c</externalDeveloperName>
    <label>Manager of &#39;Request PAM Change&#39; name</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>