News UAT/force-app/main/default/objects/Account__x/fields/ManagerEmail_of_Request_PAM_Change_name__c.field-meta.xml
<CustomField>
    <fullName>ManagerEmail_of_Request_PAM_Change_name__c</fullName>
    <externalDeveloperName>ManagerEmail_of_Request_PAM_Change_name__c</externalDeveloperName>
    <label>ManagerEmail of &#39;Request PAM Change&#39;name</label>
    <type>Email</type>
</CustomField>