News UAT/force-app/main/default/objects/Account__x/fields/Master_Agent_Category_c__c.field-meta.xml
<CustomField>
    <fullName>Master_Agent_Category_c__c</fullName>
    <externalDeveloperName>Master_Agent_Category__c</externalDeveloperName>
    <label>Master Agent Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Primary</fullName>
            </value>
            <value>
                <fullName>Secondary</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>