News UAT/force-app/main/default/objects/Account__x/fields/Master_Agent_Name_c__c.field-meta.xml
<CustomField>
    <fullName>Master_Agent_Name_c__c</fullName>
    <externalDeveloperName>Master_Agent_Name__c</externalDeveloperName>
    <label>Master Agent Name</label>
    <length>18</length>
    <referenceTo>Account__x</referenceTo>
    <relationshipLabel>Companies</relationshipLabel>
    <relationshipName>Companies</relationshipName>
    <type>ExternalLookup</type>
</CustomField>