News UAT/force-app/main/default/objects/Account__x/fields/Mismatch_c__c.field-meta.xml
<CustomField>
    <fullName>Mismatch_c__c</fullName>
    <externalDeveloperName>Mismatch__c</externalDeveloperName>
    <label>Mismatch</label>
    <precision>18</precision>
    <readOnlyProxy>true</readOnlyProxy>
    <scale>0</scale>
    <type>Number</type>
</CustomField>